# TechXchange_Hackathon_NeuralNexis

./: README.md  SERPAPI_AGENT_README.md  WATSON_SETUP_GUIDE.md  chat_bot_setup.py  langchain_tools_comprehensive.py  langchain_tools_example.py  pyproject.toml  reddit_crew_simple.py  reddit_tool.py  report.md  test_langchain_tools.py  test_serpapi_tool.py  verify_reddit_credentials.py  web_research_results.md
src/techxchange_hackathon_neuralnexis/: crew.py  crew_bkp.py  main.py  new_crew.py  serpapi_main.py
src/techxchange_hackathon_neuralnexis/config/: agents.yaml  new_agents.yaml  new_tasks.yaml  tasks.yaml
src/techxchange_hackathon_neuralnexis/tools/: custom_tool.py  serpapi_tool.py
